[package]
name = "rsurf"
version = "0.1.0"
edition = "2021"
publish = true
license = "Apache-2.0"
readme = "README.md"
description = "A data structure providing range query filtering with Fast Succinct Tries"
repository = "https://github.com/arriqaaq/rsurf"
homepage = "https://github.com/arriqaaq/rsurf"
documentation = "https://docs.rs/rsurf/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
